// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test matches snapshot 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#3183ff",
          "fontSize": 41.0958904109589,
          "fontWeight": "900",
          "margin": 5,
        }
      }
    >
      item
    </Text>
    <ActivityIndicator
      animating={false}
      color="#3183ff"
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffd600",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`test matches snapshot with loading 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#3183ff",
          "fontSize": 41.0958904109589,
          "fontWeight": "900",
          "margin": 5,
        }
      }
    >
      item
    </Text>
    <ActivityIndicator
      animating={true}
      color="#3183ff"
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffd600",
        "height": 1,
      }
    }
  />
</View>
`;
